added a "Game" action to work around bug

2008-02-08  Sven Herzberg  <sven@imendio.com>

	* src/ui/ui-main.c: (ui_main_new): added a "Game" action to work
	around bug http://bugzilla.gnome.org/show_bug.cgi?id=515017

svn path=/trunk/; revision=288